added in most requested changes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="col-2">
                 <div class="section-heading">
                     <h1>Discover and Develop your Potential</h1>
-                    <h3><mark>Globalplex's mission is to effectively equip people to excel in life and expand their influence</mark></h3>
+                    <h3><mark>Our mission is to effectively <b>equip</b> people to <b>excel</b> in life and <b>expand</b> their influence</mark></h3>
                     <a href="#equipping" class="button">FIND OUT MORE</a>
                 </div>
             </div>
@@ -129,7 +129,7 @@
 
                 <div class="col-3">
                     <div class="section-heading">
-                        <h2 class="section-title">Effectively Equipping</h2>
+                        <h2 class="section-title"><mark class="orange">Effectively Equipping</mark></h2>
                         <p class="section-subtitle">Our approach is to effectively equip and empower each individual through personal coaching, consistent consultation, and goal-setting accountability</p>
                     </div>
 
@@ -236,7 +236,7 @@
                     <!-- <div class="col-2"></div> -->
                     <div class="col-1">
                         <div class="section-heading">
-                            <h2 class="section-title">Excel In Life</h2>
+                            <h2 class="section-title"><mark>Excel In Life</mark></h2>
                             <p class="section-subtitle">Our carefully tailored development services enable you to reach your full potential and help you achieve greater performance and results</p>
                         </div>
                     </div>
@@ -248,7 +248,7 @@
                     <!-- <div class="col-2"></div> -->
                     <div class="col-1">
                         <div class="section-heading">
-                            <h2 class="section-title">Excel In Life</h2>
+                            <h2 class="section-title"><mark>Excel In Life</mark></h2>
                             <p class="section-subtitle">Our carefully tailored development services enable you to reach your full potential and help you achieve greater performance and results</p>
                         </div>
                     </div>
@@ -300,7 +300,7 @@
                     <div class="col-1">
                         <div class="col-3">
                             <div class="section-heading">
-                                <h2 class="section-title">Expand Influence</h2>
+                                <h2 class="section-title"><mark>Expanding Your Influence</mark></h2>
                                 <p class="section-subtitle">
                                     Our program helps you expand your influence and  develop life-long impact within your organization  
                                 </p>
@@ -336,7 +336,7 @@
 
             <div class="row clearfix">
                 <div class="section-heading">
-                    <h2 class="section-title">Testimonials</h2>
+                    <h2 class="section-title"><mark>Testimonials</mark></h2>
                 </div>
 
                 <!--User Testimonial-->
