updated testimony images

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <!--User Testimonial-->
                 <div class="col-3">
                     <blockquote class="testimonial classic card wow fadeInUp" data-wow-delay="0.4s">
-                        <img src="images/user-images/user-1.jpeg" alt="User"/>
+                        <img src="images/user-images/user-1.jpg" alt="User"/>
                         <p>Nicholas Chan</p>
                         <q>Seth has showed me what it means to become a servant-leader that work with passion of influencing others with our profession.</q>
                         <!-- <footer>John Doe - Happy Customer</footer> -->
@@ -353,7 +353,7 @@
                 <!--User Testimonial-->
                 <div class="col-3">
                     <blockquote class="testimonial card classic wow fadeInUp" data-wow-delay="0.5s">
-                        <img src="images/user-images/user-2.jpeg" alt="User"/>
+                        <img src="images/user-images/user-2.jpg" alt="User"/>
                         <p>Albert Paredandan</p>
                         <q>Nobody likes to fail. Being a student, this is something I always try to avoid. While university taught me to avoid failures at all cost, Seth has helped me not just to overcome my failures, but to welcome them as opportunities of growth and development to become a better person. 10/10 would recommend again</q>
                         <!-- <footer>Roslyn Doe - Happy Customer</footer> -->
@@ -364,7 +364,7 @@
                 <!--User Testimonial-->
                 <div class="col-3">
                     <blockquote class="testimonial card classic wow fadeInUp" data-wow-delay="0.6s">
-                        <img src="images/user-images/user-3.jpeg" alt="User"/>
+                        <img src="images/user-images/user-3.jpg" alt="User"/>
                         <p>Anne Hu</p>
                         <q>Seth Kim is a HIIT coach for the character - he is always maximizing on teaching moments that he observes on the spot in different situations. He helps the learner to understand why we do what we do and addresses our deeper motivations in order to excel and move forward. The training process is stretching, but always worth it.</q>
                         <!-- <footer>Thomas Doe - Happy Customer</footer> -->
