triangle is a bit hard to do putting this up for now

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <section id="excel-in-life" class="scrollto section-size">
             <div class="row clearfix web">
-                <div class="col-38">
+                <div class="col-2">
                     <!--Icon Block-->
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <!--Icon-->
@@ -201,12 +201,14 @@
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
-                            <h4>Technical Skills</h4>
+                            <h4>Personal Skills</h4>
                             <p>
-                                Resume Building <br/>
-                                Presentation Skills <br/>
-                                Interview Coaching <br/>
-                                Technology Proficiency <br/>
+                                In-depth understanding of ourselves, developing your character while also looking within to maximize your strengths and embracing weakness. 
+                            </p>
+                            <p>
+                                <i>Character Development</i><br/>
+                                <i>Emotional Intelligence</i><br/>
+                                <i>Confidence and Motivation</i> <br/>
                             </p>
                         </div>
                     </div>
@@ -214,30 +216,52 @@
 
                     <!--Icon Block-->
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
-                            <!--Icon-->
-                            <div class="icon">
-                                <img src="images/icons/soft-skill.png" alt="Icon">
-                            </div>
-                            <!--Icon Block Description-->
-                            <div class="icon-block-description">
-                                <h4>Soft Skills</h4>
-                                <p>
-                                    Creativity Development<br/>
-                                    Problem Solving Skills<br/>
-                                    Critical Thinking Training<br/>
-                                    Time Management<br/>
-                                </p>
-                            </div>
+                        <!--Icon-->
+                        <div class="icon">
+                            <img src="images/icons/soft-skill.png" alt="Icon">
                         </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Soft Skills</h4>
+                            <p>
+                                For you to navigate your environment, cooperate with others, perform well and achieve your goals.
+                            </p>
+                            <p>
+                                <i>Leadership Development</i><br/>
+                                <i>Problem Solving Skills</i><br/>
+                                <i>Stress Management</i><br/>
+                            </p>
+                        </div>
+                    </div>
                         <!--End of Icon Block-->
                 </div>
 
-                <div class="col-61">
+                <div class="col-2">
                     <!-- <div class="col-2"></div> -->
                     <div class="col-1">
                         <div class="section-heading">
                             <h2 class="section-title">Excel In Life</h2>
                             <p class="section-subtitle">Our carefully tailored development services enable you to reach your full potential and help you achieve greater performance and results</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1">
+                    <div class="col-4 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <img src="images/icons/technical-skill.png" alt="Icon">
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Technical Skills</h4>
+                            <p>
+                                Hard skills that allow you to get ahead of your peers at workplace and school. 
+                            </p>
+                            <p>
+                                <i>Presentation Skills</i><br/>
+                                <i>Interview Coaching</i><br/>
+                                <i>Technology Proficiency</i><br/>
+                            </p>
                         </div>
                     </div>
                 </div>
