--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <!--Icon-->
                         <div class="icon">
-                            <img src="images/icons/technical-skill.png" alt="Icon">
+                            <img src="images/icons/personal-skills.png" alt="Icon">
                         </div>
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
@@ -279,7 +279,47 @@
                 </div>
                 <div class="col-38">
                     <!--Icon Block-->
-                    <div class="col-2 icon-block icon-top wow fadeInUp text-center" data-wow-delay="0.1s">
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
+                            <!--Icon-->
+                        <div class="icon">
+                            <img src="images/icons/personal-skills.png" alt="Icon">
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Personal Skills</h4>
+                            <p>
+                                In-depth understanding of ourselves, developing your character while also looking within to maximize your strengths and embracing weakness. 
+                            </p>
+                            <p>
+                                <i>Character Development</i><br/>
+                                <i>Emotional Intelligence</i><br/>
+                                <i>Confidence and Motivation</i> <br/>
+                            </p>
+                        </div>
+                    </div>
+                    <!--End of Icon Block-->
+
+                    <!--Icon Block-->
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <img src="images/icons/soft-skill.png" alt="Icon">
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Soft Skills</h4>
+                            <p>
+                                For you to navigate your environment, cooperate with others, perform well and achieve your goals.
+                            </p>
+                            <p>
+                                <i>Leadership Development</i><br/>
+                                <i>Problem Solving Skills</i><br/>
+                                <i>Stress Management</i><br/>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
                         <!--Icon-->
                         <div class="icon">
                             <img src="images/icons/technical-skill.png" alt="Icon">
@@ -288,33 +328,15 @@
                         <div class="icon-block-description">
                             <h4>Technical Skills</h4>
                             <p>
-                                Resume Building <br/>
-                                Presentation Skills <br/>
-                                Interview Coaching <br/>
-                                Technology Proficiency <br/>
+                                Hard skills that allow you to get ahead of your peers at workplace and school. 
+                            </p>
+                            <p>
+                                <i>Presentation Skills</i><br/>
+                                <i>Interview Coaching</i><br/>
+                                <i>Technology Proficiency</i><br/>
                             </p>
                         </div>
                     </div>
-                    <!--End of Icon Block-->
-
-                    <!--Icon Block-->
-                    <div class="col-2 icon-block icon-top wow fadeInUp text-center" data-wow-delay="0.3s">
-                            <!--Icon-->
-                            <div class="icon">
-                                <img src="images/icons/soft-skill.png" alt="Icon">
-                            </div>
-                            <!--Icon Block Description-->
-                            <div class="icon-block-description">
-                                <h4>Soft Skills</h4>
-                                <p>
-                                    Creativity Development<br/>
-                                    Problem Solving Skills<br/>
-                                    Critical Thinking Training<br/>
-                                    Time Management<br/>
-                                </p>
-                            </div>
-                        </div>
-                        <!--End of Icon Block-->
                 </div>
             </div>
         </section>
