added trademark and fixed your to Your

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="col-2">
                 <div class="section-heading">
-                    <h1>Discover and Develop your Potential</h1>
+                    <h1>Discover and Develop Your Potential<sup>&trade;</sup></h1>
                     <h3><mark>Our mission is to effectively <b>equip</b> people to <b>excel</b> in life and <b>expand</b> their influence</mark></h3>
                     <a href="#equipping" class="button">FIND OUT MORE</a>
                 </div>
